# KrampusExplorer

./: .gitignore  Cargo.toml  LICENSE  Plan.md  README.md  marketplace.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  main.tsx  windowRouting.test.ts  windowRouting.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/commands/: builtinCommands.ts
apps/desktop/src/components/: CommandPalette.css  CommandPalette.test.ts  CommandPalette.tsx  ConfirmDialog.css  ConfirmDialog.tsx  ConfirmDialogHost.tsx  ConflictDialog.css  ConflictDialog.tsx  StatusBar.css  StatusBar.tsx  TitleBar.css  TitleBar.tsx  ToastContainer.css  ToastContainer.tsx  Toolbar.css  Toolbar.tsx  TransferProgress.css  TransferProgress.tsx
apps/desktop/src/explorer/: Breadcrumbs.css  Breadcrumbs.test.ts  Breadcrumbs.tsx  Explorer.css  Explorer.tsx  FileList.css  FileList.test.ts  FileList.tsx  FileTable.tsx  SearchBar.css  SearchBar.tsx  SearchResults.css  SearchResults.test.ts  SearchResults.tsx  SearchResultsTable.tsx  TabBar.css  TabBar.test.ts  TabBar.tsx  VirtualFileTable.tsx  VirtualSearchResults.tsx  virtualization.test.ts  virtualization.ts
apps/desktop/src/hooks/: useElementSize.ts  useFocusTrap.ts  useResolvedTheme.ts  useTabFetcher.ts
apps/desktop/src/plugins/: pluginApi.test.ts  pluginApi.ts
apps/desktop/src/preview/: MediaPreview.css  MediaPreview.tsx  PluginFilePreview.tsx  PreviewPane.css  PreviewPane.tsx  TextPreview.css  TextPreview.tsx  previewKind.test.ts  previewKind.ts
apps/desktop/src/services/: fileTransfer.test.ts  fileTransfer.ts
apps/desktop/src/settings/: PluginMarketplace.css  PluginMarketplace.test.ts  PluginMarketplace.tsx  SettingsPanel.css  SettingsPanel.tsx  WipPlugins.css  WipPlugins.test.ts  WipPlugins.tsx
apps/desktop/src/sidebar/: CollapsibleSection.tsx  DriveList.tsx  FavoritesList.tsx  IconRail.css  IconRail.test.ts  IconRail.tsx  PluginPanel.tsx  Sidebar.css  Sidebar.tsx
apps/desktop/src/stores/: useConfirmStore.test.ts  useConfirmStore.ts  useExplorerStore.test.ts  useExplorerStore.ts  usePluginStore.test.ts  usePluginStore.ts  useSearchStore.ts  useSettingsStore.test.ts  useSettingsStore.ts  useThemeStore.ts  useToastStore.ts  useTransferStore.ts  (+1 more)
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: drives.rs  format.rs  home.rs  known_folders.rs  lib.rs  listing.rs  operations.rs  trash_bin.rs
crates/partitions/: Cargo.toml
crates/partitions/src/: actions.rs  elevation.rs  lib.rs  list.rs  model.rs  system_disk.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: archive.rs  database.rs  exec.rs  git.rs  install.rs  lib.rs  mongo.rs  scan.rs  wip.rs
crates/preview/: Cargo.toml
crates/preview/src/: lib.rs
crates/recovery/: Cargo.toml
crates/recovery/src/: elevation.rs  lib.rs  progress.rs  scan.rs  signatures.rs
crates/search/: Cargo.toml
crates/search/src/: db.rs  history.rs  index.rs  lib.rs  query.rs  saved.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: elevation.rs  lib.rs  manager.rs  shell.rs
crates/wipe/: Cargo.toml
crates/wipe/src/: elevation.rs  lib.rs  progress.rs  wipe.rs
docs/: performance.md  plugin-ideas.md  plugins.md  releasing.md
docs/superpowers/plans/: 2026-07-10-phase-2-application-shell.md  2026-07-11-sidebar-plugin-ux-and-sorting.md  2026-07-16-terminal-plugin.md  2026-07-17-elevated-terminal.md  2026-07-17-file-list-virtualization.md  2026-07-17-search-results-memory-fix.md  2026-07-18-clear-unnecessary-files-plugin.md  2026-07-18-drive-format-plugin.md  2026-07-18-drive-list-auto-refresh.md  2026-07-18-recover-lost-data-plugin.md  2026-07-18-recycling-bin-plugin.md  2026-07-18-scan-directory-cap.md  2026-07-19-secure-wipe-plugin.md  2026-07-23-disk-partition-manager-plugin.md
docs/superpowers/specs/: 2026-07-10-phase-2-application-shell-design.md  2026-07-16-terminal-plugin-design.md  2026-07-17-elevated-terminal-design.md  2026-07-17-file-list-virtualization-design.md  2026-07-17-search-results-memory-fix-design.md  2026-07-18-clear-unnecessary-files-plugin-design.md  2026-07-18-drive-format-plugin-design.md  2026-07-18-drive-list-auto-refresh-design.md  2026-07-18-recover-lost-data-plugin-design.md  2026-07-18-recycling-bin-plugin-design.md  2026-07-18-scan-directory-cap-design.md  2026-07-19-secure-wipe-plugin-design.md  2026-07-23-disk-partition-manager-plugin-design.md
examples/plugins-wip/: README.md
examples/plugins/archive-manager/: README.md  manifest.json
examples/plugins/batch-rename/: README.md  manifest.json
examples/plugins/checksum-verifier/: README.md  manifest.json
examples/plugins/clear-unnecessary-files/: README.md  manifest.json
examples/plugins/database-browser/: README.md  manifest.json
examples/plugins/disk-partition-manager/: README.md  manifest.json
examples/plugins/disk-usage-visualizer/: README.md  manifest.json
examples/plugins/drive-format/: README.md  manifest.json
examples/plugins/duplicate-finder/: README.md  manifest.json
examples/plugins/git-integration/: README.md  manifest.json
examples/plugins/hello-sidebar/: README.md  manifest.json
examples/plugins/mtg-collection-manager/: README.md  manifest.json
examples/plugins/recover-lost-data/: README.md  manifest.json
examples/plugins/recycling-bin/: README.md  manifest.json
examples/plugins/run-command/: README.md  manifest.json
examples/plugins/secure-wipe/: README.md  manifest.json
examples/plugins/terminal/: README.md  manifest.json
(+26 files in other folders)
