[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/filesystem",
    "crates/search",
    "crates/preview",
    "crates/plugins",
    "crates/settings",
    "crates/terminal",
    "crates/recovery",
    "crates/wipe",
    "crates/partitions",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
