[package]
name = "explorer-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "explorer_filesystem"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
dirs = "5"
trash = "5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
