[package]
name = "explorer-partitions"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "explorer_partitions"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
explorer-filesystem = { path = "../filesystem" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
