[package]
name = "explorer-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "explorer_plugins"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
zip = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
mongodb = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
