[package]
name = "explorer-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "explorer_search"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
