[package]
name = "explorer-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "explorer_terminal"
path = "src/lib.rs"

[dependencies]
portable-pty = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
