[package]
name = "project-explorer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "project_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
explorer-core = { path = "../../../crates/core" }
explorer-filesystem = { path = "../../../crates/filesystem" }
explorer-search = { path = "../../../crates/search" }
explorer-preview = { path = "../../../crates/preview" }
explorer-plugins = { path = "../../../crates/plugins" }
explorer-settings = { path = "../../../crates/settings" }
