[package]
name = "krampus-explorer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "krampus_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
explorer-core = { path = "../../../crates/core" }
explorer-filesystem = { path = "../../../crates/filesystem" }
explorer-search = { path = "../../../crates/search" }
explorer-preview = { path = "../../../crates/preview" }
explorer-plugins = { path = "../../../crates/plugins" }
explorer-settings = { path = "../../../crates/settings" }
explorer-terminal = { path = "../../../crates/terminal" }
explorer-recovery = { path = "../../../crates/recovery" }
explorer-wipe = { path = "../../../crates/wipe" }
